# BetterHealthProject

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: admin.py  api.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
core/data/: catalogo_servicios.json  horarios.json
core/management/commands/: delete_all.py  import_schedules.py  import_services.py
core/migrations/: 0001_initial.py  0002_alter_schedule_datetime.py  0002_staffuser_remove_appointment_schedule_and_more.py  0002_userprofile.py  0003_remove_appointment_schedule_remove_appointment_date_and_more.py  0003_staffuser.py  0004_merge_20250516_1912.py  0005_appointment_confirmada.py  0005_invoice.py  0006_merge_0005_appointment_confirmada_0005_invoice.py
core/static/css/: style.css
core/templates/: 404.html  base.html  calendar.html  confirm_booking.html  error_booking.html  error_insurance.html  has_insurance.html  history.html  index.html  login.html  make_appointment_error_message.html  mock.html  patient.html  patients_list.html  private.html  service.html  services.html  signup.html
core/templates/administration/: admin_dashboard.html  administrativo_dashboard.html  financiero_dashboard.html  login.html
demo_project/: settings.py  urls.py
project/: settings.py
