[tool.poetry]
name = "betterhealth"
version = "0.1.0"
description = "Plantilla base Django con Poetry y Docker"
authors = ["Tu Nombre <tucorreo@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

